--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 
     <title>Jornada Viagens</title>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <a class="header-logo-mobile" href="index.html">
+        <img src="img/bussola-jornada-branco.png" alt="bussola, logomarca Jornada Viagens na cor branca" />
+      </a>
+      <div>
+        <label for="header-menu-check">
+          <img src="img/menu.png" alt="burguer menu na cor branca" />
+        </label>
+        <!-- checkbox oculto: controla exibição do menu mobile -->
+        <input type="checkbox" name="header-menu-check" id="header-menu-check" hidden>
+      </div>
+    </header>
+  </body>
 </html>
