adiciona links do menu no header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         </label>
         <!-- checkbox oculto: controla exibição do menu mobile -->
         <input type="checkbox" name="header-menu-check" id="header-menu-check" hidden>
+        <nav hidden>
+          <ul>
+            <li><a target="_blank" href="blog.html">Blog</a></li>
+            <li><a target="_blank" href="pacotes.html">Pacotes de Viagens</a></li>
+            <li><a target="_blank" href="contatos.html">Contatos</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
   </body>
