adiciona header mobile

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
       <a class="header-logo-mobile" href="index.html">
         <img src="img/bussola-jornada-branco.png" alt="bussola, logomarca Jornada Viagens na cor branca" />
       </a>
+
       <div>
         <label for="header-menu-check">
           <img src="img/menu.png" alt="burguer menu na cor branca" />
         </label>
         <!-- checkbox oculto: controla exibição do menu mobile -->
-        <input type="checkbox" name="header-menu-check" id="header-menu-check" hidden>
-        <nav hidden>
+        <input type="checkbox" name="header-menu-check" id="header-menu-check" hidden />
+
+        <nav class="header-menu-links" hidden>
           <ul>
             <li><a target="_blank" href="blog.html">Blog</a></li>
             <li><a target="_blank" href="pacotes.html">Pacotes de Viagens</a></li>
