adiciona header para tablet 768px e desktop 1440px

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <a class="header-logo-mobile" href="index.html">
         <img src="img/bussola-jornada-branco.png" alt="bussola, logomarca Jornada Viagens na cor branca" />
       </a>
+      <a class="header-logo-desktop" href="index.html" hidden>
+        <img src="img/bussola-texto-jornada-branco.png" alt="logomarca Jornada Viagens na cor branca" />
+      </a>
 
       <div>
         <label for="header-menu-check">
