adiciona hero image e texto de apresentacao

--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
         <nav class="header-menu-links" hidden>
           <ul>
             <li><a target="_blank" href="blog.html">Blog</a></li>
-            <li><a target="_blank" href="pacotes.html">Pacotes de Viagens</a></li>
+            <li>
+              <a target="_blank" href="pacotes.html">Pacotes de Viagens</a>
+            </li>
             <li><a target="_blank" href="contatos.html">Contatos</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <section class="hero">
+      <div></div>
+      <h2>
+        Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
+        de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!
+      </h2>
+    </section>
   </body>
 </html>
