--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -36,12 +36,18 @@
         </nav>
       </div>
     </header>
-    <section class="hero">
+    <!-- <section class="hero">
       <div></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
         de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!
       </h2>
+    </section> -->
+    <section class="section-offers">
+      <div class="section-title">
+        <h3>Ofertas da Semana</h3>
+        <hr />
+      </div>
     </section>
   </body>
 </html>
