--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="main-header">
       <a class="header-logo-mobile" href="index.html">
         <img src="img/bussola-jornada-branco.png" alt="bussola, logomarca Jornada Viagens na cor branca" />
       </a>
@@ -44,10 +44,57 @@
       </h2>
     </section> -->
     <section class="section-offers">
+
       <div class="section-title">
-        <h3>Ofertas da Semana</h3>
+        <h2>Ofertas da Semana</h2>
         <hr />
       </div>
+
+      <div class="offers-grid">
+
+        <article class="offer-card card-1">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Japão</h3>
+          </header>
+          <p class="offer-value">R$ 4000</p>
+          <footer>
+            <a class="button" href="">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="offer-card card-2">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>San Andreas</h3>
+          </header>
+          <p class="offer-value">R$ 3000</p>
+          <footer>
+            <a class="button" href="">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="offer-card card-3">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Paraíba</h3>
+          </header>
+          <p class="offer-value">R$ 1200</p>
+          <footer>
+            <a class="button" href="">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="offer-card card-4">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Manaus</h3>
+          </header>
+          <p class="offer-value">R$ 1600</p>
+          <footer>
+            <a class="button" href="">Ver detalhes</a>
+          </footer>
+        </article>
+
+      </div>
+
     </section>
   </body>
 </html>
