adiciona configuracoes globais de sections e seção de ofertas para tablet e desktop

--- a/index.html
+++ b/index.html
@@ -44,14 +44,12 @@
       </h2>
     </section> -->
     <section class="section-offers">
-
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
         <hr />
       </div>
 
       <div class="offers-grid">
-
         <article class="offer-card card-1">
           <header>
             <p>HOTEL+AÉREO</p>
@@ -59,7 +57,7 @@
           </header>
           <p class="offer-value">R$ 4000</p>
           <footer>
-            <a class="button" href="">Ver detalhes</a>
+            <a class="button" href="card_1.html" target="_blank">Ver detalhes</a>
           </footer>
         </article>
         <article class="offer-card card-2">
@@ -69,7 +67,7 @@
           </header>
           <p class="offer-value">R$ 4000</p>
           <footer>
-            <a class="button" href="">Ver detalhes</a>
+            <a class="button" href="card_2.html" target="_blank" href="">Ver detalhes</a>
           </footer>
         </article>
         <article class="offer-card card-3">
@@ -79,7 +77,7 @@
           </header>
           <p class="offer-value">R$ 1200</p>
           <footer>
-            <a class="button" href="">Ver detalhes</a>
+            <a class="button" href="card_3.html" target="_blank" href="">Ver detalhes</a>
           </footer>
         </article>
         <article class="offer-card card-4">
@@ -89,12 +87,10 @@
           </header>
           <p class="offer-value">R$ 1600</p>
           <footer>
-            <a class="button" href="">Ver detalhes</a>
+            <a class="button" href="card_4.html" target="_blank" href="">Ver detalhes</a>
           </footer>
         </article>
-
       </div>
-
     </section>
   </body>
 </html>
