redimenciona section do hero

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </nav>
       </div>
     </header>
-    <!-- <section class="hero">
+    <section class="hero">
       <div></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
         de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!
       </h2>
-    </section> -->
+    </section>
     <section class="section-offers">
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
@@ -91,6 +91,13 @@
           </footer>
         </article>
       </div>
+    </section>
+    <section class="section-categories">
+      <div class="section-title">
+        <h2>Busque por Categoria</h2>
+        <hr />
+      </div>
+      <a href="categorie_1.html" target="_blank"></a>
     </section>
   </body>
 </html>
