--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <body>
     <header class="main-header">
-      <a class="header-logo-mobile" href="index.html">
+      <a class="header-logo-mobile" href="index.html" title="Navegue para a página inicial">
         <img src="img/bussola-jornada-branco.png" alt="bussola, logomarca Jornada Viagens na cor branca" />
       </a>
-      <a class="header-logo-desktop" href="index.html" hidden>
+      <a class="header-logo-desktop" href="index.html" hidden title="Navegue para a página inicial">
         <img src="img/bussola-texto-jornada-branco.png" alt="logomarca Jornada Viagens na cor branca" />
       </a>
 
@@ -27,16 +27,19 @@
 
         <nav class="header-menu-links" hidden>
           <ul>
-            <li><a target="_blank" href="blog.html">Blog</a></li>
+            <li><a target="_blank" href="blog.html" title="Visite nosso blog">Blog</a></li>
             <li>
-              <a target="_blank" href="pacotes.html">Pacotes de Viagens</a>
+              <a target="_blank" href="pacotes.html" title="Confira nossos pacotes de viagens">
+                Pacotes de Viagens
+              </a>
             </li>
-            <li><a target="_blank" href="contatos.html">Contatos</a></li>
+            <li><a target="_blank" href="contatos.html" title="Fale com a gente">Contatos</a></li>
           </ul>
         </nav>
       </div>
     </header>
-    <section class="hero">
+
+    <!-- <section class="hero">
       <div></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
@@ -57,7 +60,7 @@
           </header>
           <p class="offer-value">R$ 4000</p>
           <footer>
-            <a class="button" href="card_1.html" target="_blank">Ver detalhes</a>
+            <a class="button" href="card_1.html" target="_blank" title="Conheça nossas ofertas">Ver detalhes</a>
           </footer>
         </article>
         <article class="offer-card card-2">
@@ -67,7 +70,9 @@
           </header>
           <p class="offer-value">R$ 4000</p>
           <footer>
-            <a class="button" href="card_2.html" target="_blank" href="">Ver detalhes</a>
+            <a class="button" href="card_2.html" target="_blank" href="" title="Conheça uma de nossas ofertas">
+              Ver detalhes
+            </a>
           </footer>
         </article>
         <article class="offer-card card-3">
@@ -77,7 +82,9 @@
           </header>
           <p class="offer-value">R$ 1200</p>
           <footer>
-            <a class="button" href="card_3.html" target="_blank" href="">Ver detalhes</a>
+            <a class="button" href="card_3.html" target="_blank" href="" title="Conheça uma de nossas ofertas">
+              Ver detalhes
+            </a>
           </footer>
         </article>
         <article class="offer-card card-4">
@@ -87,17 +94,63 @@
           </header>
           <p class="offer-value">R$ 1600</p>
           <footer>
-            <a class="button" href="card_4.html" target="_blank" href="">Ver detalhes</a>
+            <a class="button" href="card_4.html" target="_blank" href="" title="Conheça uma de nossas ofertas">
+              Ver detalhes
+            </a>
           </footer>
         </article>
       </div>
-    </section>
+    </section> -->
+
     <section class="section-categories">
       <div class="section-title">
         <h2>Busque por Categoria</h2>
         <hr />
       </div>
-      <a href="categorie_1.html" target="_blank"></a>
+      <div class="categories-grid">
+        <a class="categorie-card" href="categorie_1.html" target="_blank" title="Conheça nossos pacote nacionais">
+          <div class="categorie-img">
+            <img src="img/icone-caminhada.png" alt="icone na cor cinza de homem caminhnado" />
+          </div>
+          <h4>Pacotes Nacionais</h4>
+        </a>
+
+        <a
+          class="categorie-card"
+          href="categorie_2.html"
+          target="_blank"
+          title="Conheça nossos pacote internacionais"
+        >
+          <div class="categorie-img">
+            <img src="img/icone-aviao.png" alt="icone na cor cinza de avião" />
+          </div>
+          <h4>Pacotes Internacionais</h4>
+        </a>
+
+        <a
+          class="categorie-card"
+          href="categorie_3.html"
+          target="_blank"
+          title="Conheça nossos serviços de transporte"
+        >
+          <div class="categorie-img">
+            <img src="img/icone-onibus.png" alt="icone na cor cinza de ônibus" />
+          </div>
+          <h4>Transfer</h4>
+        </a>
+
+        <a
+          class="categorie-card"
+          href="categorie_4.html"
+          target="_blank"
+          title="Conheça nossos serviços de seguros"
+        >
+          <div class="categorie-img">
+            <img src="img/icone-planeta.png" alt="icone na cor cinza de planeta com cadeado" />
+          </div>
+          <h4>Seguro Viagem</h4>
+        </a>
+      </div>
     </section>
   </body>
 </html>
