--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </header>
 
-    <!-- <section class="hero">
+    <!--<section class="hero">
       <div></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
@@ -52,7 +52,7 @@
         <hr />
       </div>
 
-      <div class="offers-grid">
+       <div class="offers-grid">
         <article class="offer-card card-1">
           <header>
             <p>HOTEL+AÉREO</p>
@@ -100,7 +100,7 @@
           </footer>
         </article>
       </div>
-    </section> -->
+    </section>
 
     <section class="section-categories">
       <div class="section-title">
@@ -150,6 +150,38 @@
           </div>
           <h4>Seguro Viagem</h4>
         </a>
+      </div>
+    </section> -->
+
+    <section class="section-destinations">
+      <div class="section-title">
+        <h2>Destinos Populares</h2>
+        <hr />
+      </div>
+      <div class="destination-grid">
+
+        <article class="destination-card card-1">
+          <header>
+            <div></div>
+            <h4>Tokyo</h4>
+          </header>
+          <p>Tokyo é uma cidade vibrante e cosmopolita, com seus templos históricos, museus de arte moderna e arranha-céus icônicos. Não perca a chance de mergulhar em sua atmosfera fascinante.</p>
+          <footer>
+            <a class="button">Ver detalhes</a>
+          </footer>
+        </article>
+
+        <article class="destination-card card-2">
+          <header>
+            <div></div>
+            <h4>Osaka</h4>
+          </header>
+          <p>Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa por sua gastronomia deliciosa e por ser um excelente ponto de partida para explorar outras cidades japonesas próximas.</p>
+          <footer>
+            <a class="button">Ver detalhes</a>
+          </footer>
+        </article>
+
       </div>
     </section>
   </body>
