--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
       </div>
     </header>
 
-    <!--<section class="hero">
+    <section class="hero">
       <div></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos
         de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!
       </h2>
     </section>
+
     <section class="section-offers">
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
         <hr />
       </div>
 
-       <div class="offers-grid">
+      <div class="offers-grid">
         <article class="offer-card card-1">
           <header>
             <p>HOTEL+AÉREO</p>
@@ -151,7 +152,7 @@
           <h4>Seguro Viagem</h4>
         </a>
       </div>
-    </section> -->
+    </section>
 
     <section class="section-destinations">
       <div class="section-title">
@@ -159,13 +160,15 @@
         <hr />
       </div>
       <div class="destination-grid">
-
         <article class="destination-card card-1">
           <header>
             <div></div>
             <h4>Tokyo</h4>
           </header>
-          <p>Tokyo é uma cidade vibrante e cosmopolita, com seus templos históricos, museus de arte moderna e arranha-céus icônicos. Não perca a chance de mergulhar em sua atmosfera fascinante.</p>
+          <p>
+            Tokyo é uma cidade vibrante e cosmopolita, com seus templos históricos, museus de arte moderna e
+            arranha-céus icônicos. Não perca a chance de mergulhar em sua atmosfera fascinante.
+          </p>
           <footer>
             <a class="button">Ver detalhes</a>
           </footer>
@@ -176,12 +179,14 @@
             <div></div>
             <h4>Osaka</h4>
           </header>
-          <p>Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa por sua gastronomia deliciosa e por ser um excelente ponto de partida para explorar outras cidades japonesas próximas.</p>
+          <p>
+            Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa por sua gastronomia deliciosa e por
+            ser um excelente ponto de partida para explorar outras cidades japonesas próximas.
+          </p>
           <footer>
             <a class="button">Ver detalhes</a>
           </footer>
         </article>
-
       </div>
     </section>
   </body>
